# embedded-journey

./: README.md
Rfid-access-control/: sketch_mar10a.ino
bare_metal/bare_metal_blink/: Makefile  main  main.c  main.s
bare_metal/blink/: Cargo.toml
bare_metal/blink/.cargo/: config.toml
bare_metal/blink/src/: main.rs
bare_metal/button/: Makefile  bit_test  bit_test.c  main.c
bare_metal/inputs/: Cargo.toml
bare_metal/inputs/src/: main.rs
bare_metal/repetition/: main.c
blink/: .gitignore  go.mod  main.go
countdown/: alert.go  display.go  go.mod  go.sum  main.go  music.go
fade_led/: CMakeLists.txt  fade_led.c
fade_led_go/: go.mod  main.go
hello/: go.mod  main.go
hello_pwm/: CMakeLists.txt  main.c
law_clock/: CMakeLists.txt  display.c  law_clock.c
multicore_blink/: CMakeLists.txt  main.c
shift_reg/: CMakeLists.txt  shift_reg.c
timer/: CMakeLists.txt
timer/src/: displib.c  main.c
